<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cliniclist"
            android:icon="@drawable/ic_baseline_local_hospital_24"
            android:title="@string/menu_clinic" />
        <item
            android:id="@+id/nav_mail"
            android:icon="@drawable/ic_baseline_email_24"
            android:title="@string/appointment" />
        <item
            android:id="@+id/nav_announcement"
            android:icon="@drawable/ic_baseline_announcement_24"
            android:title="@string/announcement" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/logout" />

    </group>
</menu>