<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.announcement.ContactActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/shakespeare">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/mrjams_logo"
                android:src="@drawable/mr_jams_logo" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/contact_us"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            app:boxCornerRadiusBottomEnd="15sp"
            app:boxCornerRadiusBottomStart="15sp"
            app:boxCornerRadiusTopEnd="15sp"
            app:boxCornerRadiusTopStart="15sp" >

            <EditText
                android:id="@+id/tboxMesName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_shakespeare"
                android:ems="10"
                android:hint="Name"
                android:enabled="false"
                android:inputType="textPersonName"
                android:textColor="@color/text_shakespeare"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="15sp"
            app:boxCornerRadiusBottomStart="15sp"
            app:boxCornerRadiusTopEnd="15sp"
            app:boxCornerRadiusTopStart="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <EditText
                android:id="@+id/tboxMesEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/light_shakespeare"
                android:ems="10"
                android:hint="@string/txtEmail"
                android:enabled="false"
                android:inputType="textPersonName"
                android:textColor="@color/text_shakespeare"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="15sp"
            app:boxCornerRadiusBottomStart="15sp"
            app:boxCornerRadiusTopEnd="15sp"
            app:boxCornerRadiusTopStart="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <EditText
                android:id="@+id/tboxMesContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/light_shakespeare"
                android:ems="10"
                android:hint="@string/txtNum"
                android:inputType="phone"
                android:enabled="false"
                android:textColor="@color/text_shakespeare"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout6"
            android:layout_width="360dp"
            android:layout_height="120dp"
            app:boxCornerRadiusBottomEnd="15sp"
            app:boxCornerRadiusBottomStart="15sp"
            app:boxCornerRadiusTopEnd="15sp"
            app:boxCornerRadiusTopStart="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" >

            <EditText
                android:id="@+id/tboxMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/light_shakespeare"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/txtMessage"
                android:inputType="textMultiLine"
                android:textColor="@color/text_shakespeare"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSendMes"
            android:layout_marginRight="30dp"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/btnSend"
            android:layout_gravity="right"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</LinearLayout>